# todos-with-obsidian

./: .gitignore  LICENSE  MANIFEST.in  README.md  bootstrap.py  brain.spec  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
brain/: __init__.py  agent_backends.py  app_config.py  app_entry.py  cli.py  daily.py  env_config.py  init_vault.py  integration_context.py  integrations_api.py  models.py  prompts.py  server.py  session.py  summarizer.py  utils.py  vault.py
brain/templates/: CLAUDE.md  brain.config.yaml  daily_note.md
brain/web/: index.html
docs/: BRAIN_AGENT_V1_IMPLEMENTATION_PLAN.md  PRODUCT_SPEC_BRAIN_AGENT.md  index.html
docs/design-spec/: SPEC.md  index.html  landing.html  product-dark.html  product-integrations.html  product-light.html
electron/: SupabaseConfig.js.template  main.js  package-lock.json  package.json  preload.js
electron/renderer/: index.html  onboarding.js
landing/: index.html
macos/: ExportOptions.plist  project.yml
macos/BrainSquared.xcodeproj/: project.pbxproj
macos/BrainSquared/Resources/: AppIcon.icns  Info.plist
macos/BrainSquared/Resources/Assets.xcassets/BrainLogo.imageset/: Contents.json
macos/BrainSquared/Sources/: BrainConfigWriter.swift  BrainLogoView.swift  BrainSquaredApp.swift  CLIInstaller.swift  ContentView.swift  KeychainHelper.swift  OnboardingView.swift  ServerManager.swift
scripts/: build-dmg.sh
tests/: test_app_config.py  test_backends.py  test_daily.py  test_init_vault.py  test_prompt_builder.py  test_server_ws.py  test_session.py
